--- a/src/main/resources/templates/todo-list.html
+++ b/src/main/resources/templates/todo-list.html
@@ -10,10 +10,10 @@
 
     <title>redbee Academy - Todo list</title>
 
-    <script th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
-    <link th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}" rel="stylesheet" type="text/css" media="screen"/>
-    <link th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css" media="screen"/>
-    <link rel="stylesheet" th:href="@{/css/todo-list.css}">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" th:href="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}" rel="stylesheet" type="text/css" media="screen"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="../static/css/todo-list.css" th:href="@{/css/todo-list.css}">
 </head>
 
 <body>
@@ -29,23 +29,15 @@
                     <perfect-scrollbar class="ps-show-limits">
                         <div style="position: static;" class="ps ps--active-y">
                             <div class="ps-content">
-                                <ul class=" list-group list-group-flush">
-                                    <li class="list-group-item">
-                                        <div class="todo-indicator bg-warning"></div>
+                                <ul class="list-group list-group-flush" th:remove="all-but-first" th:object="${todoList}">
+                                    <li class="list-group-item" th:each="item : *{items}">
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
-                                                    <div class="custom-checkbox custom-control"><input
-                                                            class="custom-control-input" id="exampleCustomCheckbox12"
-                                                            type="checkbox"><label class="custom-control-label"
-                                                                                   for="exampleCustomCheckbox12">&nbsp;</label>
-                                                    </div>
                                                 </div>
                                                 <div class="widget-content-left">
-                                                    <div class="widget-heading">Call Sam For payments
-                                                        <div class="badge badge-danger ml-2">Rejected</div>
+                                                    <div class="widget-heading" th:text="${item.descripcion}">Call Sam For payments
                                                     </div>
-                                                    <div class="widget-subheading"><i>By Bob</i></div>
                                                 </div>
                                                 <div class="widget-content-right">
                                                     <button class="border-0 btn-transition btn btn-outline-success"><i
@@ -57,23 +49,12 @@
                                         </div>
                                     </li>
                                     <li class="list-group-item">
-                                        <div class="todo-indicator bg-focus"></div>
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
-                                                    <div class="custom-checkbox custom-control"><input
-                                                            class="custom-control-input" id="exampleCustomCheckbox1"
-                                                            type="checkbox"><label class="custom-control-label"
-                                                                                   for="exampleCustomCheckbox1">&nbsp;</label>
-                                                    </div>
                                                 </div>
                                                 <div class="widget-content-left">
                                                     <div class="widget-heading">Make payment to Bluedart</div>
-                                                    <div class="widget-subheading">
-                                                        <div>By Johnny
-                                                            <div class="badge badge-pill badge-info ml-2">NEW</div>
-                                                        </div>
-                                                    </div>
                                                 </div>
                                                 <div class="widget-content-right">
                                                     <button class="border-0 btn-transition btn btn-outline-success"><i
@@ -85,19 +66,12 @@
                                         </div>
                                     </li>
                                     <li class="list-group-item">
-                                        <div class="todo-indicator bg-primary"></div>
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
-                                                    <div class="custom-checkbox custom-control"><input
-                                                            class="custom-control-input" id="exampleCustomCheckbox4"
-                                                            type="checkbox"><label class="custom-control-label"
-                                                                                   for="exampleCustomCheckbox4">&nbsp;</label>
-                                                    </div>
                                                 </div>
                                                 <div class="widget-content-left flex2">
                                                     <div class="widget-heading">Office rent</div>
-                                                    <div class="widget-subheading">By Samino!</div>
                                                 </div>
                                                 <div class="widget-content-right">
                                                     <button class="border-0 btn-transition btn btn-outline-success"><i
@@ -109,19 +83,12 @@
                                         </div>
                                     </li>
                                     <li class="list-group-item">
-                                        <div class="todo-indicator bg-info"></div>
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
-                                                    <div class="custom-checkbox custom-control"><input
-                                                            class="custom-control-input" id="exampleCustomCheckbox2"
-                                                            type="checkbox"><label class="custom-control-label"
-                                                                                   for="exampleCustomCheckbox2">&nbsp;</label>
-                                                    </div>
                                                 </div>
                                                 <div class="widget-content-left">
                                                     <div class="widget-heading">Office grocery shopping</div>
-                                                    <div class="widget-subheading">By Tida</div>
                                                 </div>
                                                 <div class="widget-content-right">
                                                     <button class="border-0 btn-transition btn btn-outline-success"><i
@@ -137,15 +104,9 @@
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
-                                                    <div class="custom-checkbox custom-control"><input
-                                                            class="custom-control-input" id="exampleCustomCheckbox3"
-                                                            type="checkbox"><label class="custom-control-label"
-                                                                                   for="exampleCustomCheckbox3">&nbsp;</label>
-                                                    </div>
                                                 </div>
                                                 <div class="widget-content-left flex2">
                                                     <div class="widget-heading">Ask for Lunch to Clients</div>
-                                                    <div class="widget-subheading">By Office Admin</div>
                                                 </div>
                                                 <div class="widget-content-right">
                                                     <button class="border-0 btn-transition btn btn-outline-success"><i
@@ -161,15 +122,9 @@
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left mr-2">
-                                                    <div class="custom-checkbox custom-control"><input
-                                                            class="custom-control-input" id="exampleCustomCheckbox10"
-                                                            type="checkbox"><label class="custom-control-label"
-                                                                                   for="exampleCustomCheckbox10">&nbsp;</label>
-                                                    </div>
                                                 </div>
                                                 <div class="widget-content-left flex2">
                                                     <div class="widget-heading">Client Meeting at 11 AM</div>
-                                                    <div class="widget-subheading">By CEO</div>
                                                 </div>
                                                 <div class="widget-content-right">
                                                     <button class="border-0 btn-transition btn btn-outline-success"><i
@@ -185,9 +140,21 @@
                         </div>
                     </perfect-scrollbar>
                 </div>
+
                 <div class="d-block text-right card-footer">
-                    <button class="mr-2 btn btn-link btn-sm">Cancel</button>
-                    <button class="btn btn-primary">Add Task</button>
+                    <div class="widget-content p-0">
+                        <div class="widget-content-wrapper">
+                            <form action="#" th:action="@{/todo-list/{id}/items(id=${todoList.id})}" th:object="${nuevoItem}" method="POST" th:method="POST">
+                                <div class="widget-content-left mr-2">
+                                    <input  type="text" hidden th:field="${nuevoItem.listId}" th:value="${todoList.id}"></input>
+                                </div>
+                                <div class="widget-content-left flex2">
+                                    <input  type="text" placeholder="Nueva tarea" th:field="${nuevoItem.detalle}"></input>
+                                    <input type="submit" class="btn btn-primary" value="Add Task"></input>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
