cambiar estado de tarea

--- a/src/main/resources/static/css/todo-list.css
+++ b/src/main/resources/static/css/todo-list.css
@@ -170,3 +170,8 @@ i {
 .card-footer {
     background-color: #fff
 }
+
+.tarea-finalizada {
+    text-decoration:line-through;
+    color: green;
+}
