--- a/src/main/resources/static/css/todo-list.css
+++ b/src/main/resources/static/css/todo-list.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1.22rem;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
@@ -66,14 +66,14 @@ i {
 }
 
 .scroll-area-sm {
-    height: 288px;
+    max-height: 288px;
     overflow-x: hidden
 }
 
 .list-group-item {
     position: relative;
     display: block;
-    padding: 0.75rem 1.25rem;
+    padding: 0.5rem 1.25rem;
     margin-bottom: -1px;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.125)
@@ -102,7 +102,7 @@ i {
 }
 
 .widget-content {
-    padding: 1rem;
+    padding: 0.2rem;
     flex-direction: row;
     align-items: center
 }
@@ -174,4 +174,8 @@ i {
 .tarea-finalizada {
     text-decoration:line-through;
     color: green;
+}
+
+form {
+    display: inline;
 }
