--- a/src/main/resources/templates/todo-list.html
+++ b/src/main/resources/templates/todo-list.html
@@ -40,13 +40,13 @@
                                                     </div>
                                                 </div>
                                                 <div class="widget-content-right">
-                                                    <form action="#" th:action="@{/todo-list/cambiarEstado}" method="POST" th:method="POST">
+                                                    <form action="#" th:action="@{/cambiarEstado}" method="POST" th:method="POST">
                                                         <input type="text" hidden th:value="${todoList.id}" th:name="listId" >
                                                         <input type="text" hidden th:value="${item.id}" th:name="itemId" >
                                                         <button type="submit" class="border-0 btn-transition btn btn-outline-success">
                                                             <i class="fa fa-check"></i></button>
                                                     </form>
-                                                    <form action="#" th:action="@{/todo-list/eliminar}" method="POST" th:method="POST">
+                                                    <form action="#" th:action="@{/eliminar}" method="POST" th:method="POST">
                                                         <input type="text" hidden th:value="${todoList.id}" th:name="listId" >
                                                         <input type="text" hidden th:value="${item.id}" th:name="itemId" >
                                                         <button class="border-0 btn-transition btn btn-outline-danger"><i
@@ -152,7 +152,7 @@
                 <div class="d-block text-right card-footer">
                     <div class="widget-content p-0">
                         <div class="widget-content-wrapper">
-                            <form action="#" th:action="@{/todo-list/agregarItem}" method="POST" th:method="POST">
+                            <form action="#" th:action="@{/agregarItem}" method="POST" th:method="POST">
                                 <div class="widget-content-left mr-2">
                                     <input  type="text" hidden th:name="listId" th:value="${todoList.id}"></input>
                                 </div>
