textos en ingles

--- a/src/main/resources/templates/todo-list.html
+++ b/src/main/resources/templates/todo-list.html
@@ -26,7 +26,7 @@
         <div class="card-hover-shadow-2x mb-3 card">
             <div class="card-header-tab card-header">
                 <div class="card-header-title font-size-lg text-capitalize font-weight-normal"><i
-                        class="fa fa-tasks"></i>&nbsp;Task Lists
+                        class="fa fa-tasks"></i>&nbsp;Mis tareas
                 </div>
             </div>
             <div class="scroll-area-sm">
@@ -169,7 +169,7 @@
                             </div>
                             <div class="widget-content-left flex2">
                                 <input placeholder="Nueva tarea" th:name="detalle" type="text"></input>
-                                <input class="btn btn-primary" type="submit" value="Add Task"></input>
+                                <input class="btn btn-primary" type="submit" value="Nueva tarea"></input>
                             </div>
                         </form>
                     </div>
